--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@ body, html {
 }
 
 body {
-    background-image: url(../images/background.jpg);
+    background-image:  url(../images/background.jpg);
     background-position: fixed;
-    background-size: cover;
-    }
-
+    background-size: contain;
+}
